# make_a_lisp_typed_and_readable

./: Cargo.toml  README.md  section_test_convert.py  single_line_test_convert.py  test_convert.py
src/: core.rs  env.rs  main.rs  new_env.rs  old_core.rs  old_env.rs  old_printer.rs  old_reader.rs  old_repl.rs  printer.rs  reader.rs  repl.rs  step0_repl.rs  step1.rs  step2_eval.rs  step3_env.rs  step4_if_fn_do.rs  step4_temp.rs  step5_tco.rs  step6_file.rs  step7_quote.rs  step8_macros.rs  step9_try.rs  stepA_mal.rs  types.rs  update_types.rs
src/mal_steps/: mod.rs  step1_read_print.rs  step2_eval.rs  step3_env.rs  step4_if_fn_do.rs  step4_temp.rs  step5_tco.rs  step6_file.rs  step7_quote.rs  step8_macros.rs  step9_try.rs  stepA_mal.rs
src/reader/: lexer.rs  mod.rs  parser.rs
src/types/: atomic.rs  collection.rs  error.rs  function.rs  mod.rs
src/types/atomic/: numeric.rs
src/types/value/: atomic.rs  mod.rs
tests/: step0_repl.mal  step1_read_print.mal  step2_eval.mal  stepA_mal.mal
