[package]
name = "make_a_lisp_readable_with_types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.13.0"
test-case = "3.1.0"
rustyline = "11.0.0"
miette = {version = "5.9.0", features =["fancy"]}
regex = "1.8.4"
evcxr = "0.14.2"